--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Trex Game</title>
     <link rel="icon" href="img/trex.png" />
     <link rel="stylesheet" href="styles.css" />
@@ -14,5 +14,8 @@
       <div id="cactus"></div>
     </div>
     <script src="scripts.js"></script>
+    <div style="text-align: center">
+      <br /><br /><button onclick="jump()">JUMP</button>
+    </div>
   </body>
 </html>
