--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
   </head>
 
   <body>
+    <div style="text-align: center">
+      <script>
+        alert("Click Ok to Start");
+      </script>
+    </div>
+    <br /><br />
     <div class="game">
+      <h1 style="text-align: right">Score:</h1>
       <div id="dino"></div>
       <div id="cactus"></div>
     </div>
