--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
   </head>
 
   <body>
-    <div style="text-align: center">
-      <script>
-        alert("Click Ok to Start");
-      </script>
-    </div>
+    <script>
+      alert("Click Ok to Start");
+    </script>
     <br /><br />
     <div class="game">
-      <h1 style="text-align: right">Score:</h1>
+      <!-- TODO SCORE Updation -->
+      <!-- <p style="text-align: right">
+        SCORE:
+        <script>
+          document.write(score);
+        </script>
+      </p> -->
+
       <div id="dino"></div>
       <div id="cactus"></div>
     </div>
