--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <br /><br />
     <div class="game">
       <!-- TODO SCORE Updation -->
-      <!-- <p style="text-align: right">
-        SCORE:
+      <h1 style="text-align: right">
+        <img src="img/sun.png" width="81.50px" height="61.2px" />
         <script>
           document.write(score);
         </script>
-      </p> -->
+      </h1>
 
       <div id="dino"></div>
       <div id="cactus"></div>
