--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <br /><br />
     <div class="game">
       <!-- TODO SCORE Updation -->
-      <h1 style="text-align: right">
+      <!-- <div style="text-align: right">
         <img src="img/sun.png" width="81.50px" height="61.2px" />
-        <script>
-          document.write(score);
-        </script>
-      </h1>
+      </div> -->
+
+      <div id="sun"></div>
+      <div id="slow_cloud"></div>
+      <div id="fast_cloud"></div>
 
       <div id="dino"></div>
       <div id="cactus"></div>
