--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 </head>
 
 <body>
-    <!-- <script>
+    <script>
         alert("Click Ok to Start");
     </script>
-    <br /><br /> -->
     <div class="score_now">
         <div>
             <p id="score">00</p>
